* Add doc
* README and legal notice
* Initial release